--- a/index.html
+++ b/index.html
@@ -1,18 +1,24 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" href="style.css"/>
-<title> Le titre qui apparaitra dans le navigateur </title>
-<meta charset="UTF-8">
+    <link rel="stylesheet" href="style.css"/>
+    <title>Elegant Webpage</title>
+    <meta charset="UTF-8">
 </head>
 
 <body>
-<h1> Ici le titre principal </h1>
-<p> Et voilà le texte de la page</p>
-<h2> On peut créer jusqu'à six niveaux de titres en HTML </h2>
-<p> Et voici un autre paragraphe 
-<a href= "http://www.wildcodeschool.com"> titre du lien </a>
-<img src= "https://res.cloudinary.com/wildcodeschool/image/upload/c_fill,h_50/v1/static/irjoy97aq0eol8bf6959">
-</p> 
+    <header>
+        <h1>Welcome to My Elegant Webpage</h1>
+    </header>
+    <div class="content">
+        <p>This is the main content of the page. It is styled to be readable and aesthetically pleasing.</p>
+        <h2>Multiple Levels of Headings</h2>
+        <p>Here is another paragraph with a <a href="http://www.wildcodeschool.com">link to Wild Code School</a> and an image below.</p>
+        <img src="https://res.cloudinary.com/wildcodeschool/image/upload/c_fill,h_50/v1/static/irjoy97aq0eol8bf6959" alt="Wild Code School Logo">
+        <p>Continue adding more content to make your page informative and interesting.</p>
+    </div>
+    <footer>
+        &copy; 2024 My Elegant Webpage. All rights reserved.
+    </footer>
 </body> 
 </html>
